--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,13 +1,58 @@
 body {
   margin: 0;
+  padding: 0;
+  box-sizing: border-box;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  line-height: 0;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+header{
+  text-align: center;
+  padding: 20px 0px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  text-align: center;
+  color: white;
+  background-color: lightblue
+}
+footer{
+  /*display: flex; 
+  align-items: center;
+  justify-content: center;*/
+  line-height: 1em;
+  width: 100%;
+  text-align: center;
+  padding-top: 50px;
+}
+#root{
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+.main{
+  flex-grow: 1;
+}
+.collapsed-element:nth-of-type(even){
+  width: 100%;
+  background-color: lightblue;
+  padding: 20px;
+  margin-top: 10px;
+}
+.collapsed-element:nth-of-type(odd){
+  width: 100%;
+  background-color: lightcoral;
+  padding: 20px;
+  margin-top: 10px;
+}
+
+
+.Collapsible p {
+  font-size: 18px;
+  padding: 20px;
 }
